Getters for schema versions
